# silex

./: .gitignore  Cargo.toml  README.md
shells/: silex.fish
src/: chat.rs  crypto.rs  db.rs  git.rs  main.rs  todo.rs  tree.rs  utils.rs  vcs.rs  web.rs
