[package]
name = "silex"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.3"
chrono = "0.4.43"
clap = "4.5.55"
hex = "0.4.3"
ignore = "0.4.25"
inquire = { version = "0.9.2", features = ["date", "editor", "console"] }
similar = "2.7.0"
sqlite = "0.37.0"
uuid = { version = "1.20.0", features = ["v4"] }
