[package]
name = "silex"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
blake3 = "1.8.3"
breathes = "0.1.0"
chrono = "0.4.43"
clap = "4.5.55"
crossterm = "0.29.0"
glob = "0.3.3"
hex = "0.4.3"
ignore = "0.4.25"
inquire = { version = "0.9.2", features = ["date", "editor", "console"] }
similar = "2.7.0"
sqlite = "0.37.0"
tabled = "0.20.0"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
git2 = "0.20.3"
flate2 = "1.1.8"
